@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-16T08:12:35Z",
+  "timestamp" : "2023-07-16T16:13:04Z",
   "count_outdated" : 2589,
   "uniques_outdated" : 978,
-  "count" : 2616,
+  "count" : 2617,
   "uniques" : 994,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
