@@ -1,5 +1,5 @@
 {
-  "count": 27,
+  "count": 28,
   "uniques": 8,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
