@@ -1,3 +1,12 @@
+2023-07-16T16:13:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5568623839 # 1732
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
+* notice: last 14d: unq all: 8 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 978 2589 / 994 2616
+* notice: next accum: outdated-unq outdated-all / unq all: 978 2589 / 994 2617
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-07-16]
+
 2023-07-16T08:12:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5566630514 # 1731
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
